Building databases

HP@DESKTOP-B3HCFBE MINGW64 ~
$ mkdir Learndb

HP@DESKTOP-B3HCFBE MINGW64 ~
$ cd learndb

HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ py -m venv .venv

HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ source .venv/scripts/activate
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ pip install flask
Collecting flask
  Using cached Flask-2.2.2-py3-none-any.whl (101 kB)
Collecting itsdangerous>=2.0
  Using cached itsdangerous-2.1.2-py3-none-any.whl (15 kB)
Collecting importlib-metadata>=3.6.0
  Downloading importlib_metadata-5.0.0-py3-none-any.whl (21 kB)
Collecting Werkzeug>=2.2.2
  Using cached Werkzeug-2.2.2-py3-none-any.whl (232 kB)
Collecting click>=8.0
  Using cached click-8.1.3-py3-none-any.whl (96 kB)
Collecting Jinja2>=3.0
  Using cached Jinja2-3.1.2-py3-none-any.whl (133 kB)
Collecting colorama
  Using cached colorama-0.4.5-py2.py3-none-any.whl (16 kB)
Collecting zipp>=0.5
  Using cached zipp-3.8.1-py3-none-any.whl (5.6 kB)
Collecting MarkupSafe>=2.0
  Using cached MarkupSafe-2.1.1-cp39-cp39-win_amd64.whl (17 kB)
Installing collected packages: zipp, MarkupSafe, colorama, Werkzeug, Jinja2, itsdangerous, importlib-metadata, click, flask
Successfully installed Jinja2-3.1.2 MarkupSafe-2.1.1 Werkzeug-2.2.2 click-8.1.3 colorama-0.4.5 flask-2.2.2 importlib-metadata-5.0.0 itsdangerous-2.1.2 zipp-3.8.1
WARNING: You are using pip version 21.1.1; however, version 22.2.2 is available.
You should consider upgrading via the 'c:\users\hp\learndb\.venv\scripts\python.exe -m pip install --upgrade pip' command.
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ vi app.py
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ vi templates
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ mkdir templates
mkdir: cannot create directory ‘templates’: File exists
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ rm templates
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ mkdir templates
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ ls
app.py  templates/
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ cd templates
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb/templates
$ touch models.html
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb/templates
$ ls
models.html
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb/templates
$ pwd
/c/Users/HP/learndb/templates
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb/templates
$ vi models.html
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb/templates
$ cd ..
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ ls
app.py  templates/
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ vi app.py
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ cd templates
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb/templates
$ vi models.html
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb/templates
$ cd ..
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ ls
app.py  templates/
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ python app.py
  File "C:\Users\HP\learndb\app.py", line 20
    return f"User {}"
                     ^
SyntaxError: f-string: empty expression not allowed
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ vi app.py
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ python app.py
  File "C:\Users\HP\learndb\app.py", line 20
    return f"User {}"
                     ^
SyntaxError: f-string: empty expression not allowed
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ vi app.py
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ python app.py
Traceback (most recent call last):
  File "C:\Users\HP\learndb\app.py", line 2, in <module>
    from flask_sqlalchemy import SQLAlchemy
ModuleNotFoundError: No module named 'flask_sqlalchemy'
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ pip install flasksql-alchemy
ERROR: Could not find a version that satisfies the requirement flasksql-alchemy (from versions: none)
ERROR: No matching distribution found for flasksql-alchemy
WARNING: You are using pip version 21.1.1; however, version 22.2.2 is available.
You should consider upgrading via the 'c:\users\hp\learndb\.venv\scripts\python.exe -m pip install --upgrade pip' command.
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ python app.py
Traceback (most recent call last):
  File "C:\Users\HP\learndb\app.py", line 2, in <module>
    from flask_sqlalchemy import SQLAlchemy
ModuleNotFoundError: No module named 'flask_sqlalchemy'
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ pip install flask_sqlalchemy
Collecting flask_sqlalchemy
  Downloading Flask_SQLAlchemy-2.5.1-py2.py3-none-any.whl (17 kB)
Collecting SQLAlchemy>=0.8.0
  Downloading SQLAlchemy-1.4.41-cp39-cp39-win_amd64.whl (1.6 MB)
Requirement already satisfied: Flask>=0.10 in c:\users\hp\learndb\.venv\lib\site-packages (from flask_sqlalchemy) (2.2.2)
Requirement already satisfied: Jinja2>=3.0 in c:\users\hp\learndb\.venv\lib\site-packages (from Flask>=0.10->flask_sqlalchemy) (3.1.2)
Requirement already satisfied: Werkzeug>=2.2.2 in c:\users\hp\learndb\.venv\lib\site-packages (from Flask>=0.10->flask_sqlalchemy) (2.2.2)
Requirement already satisfied: itsdangerous>=2.0 in c:\users\hp\learndb\.venv\lib\site-packages (from Flask>=0.10->flask_sqlalchemy) (2.1.2)
Requirement already satisfied: importlib-metadata>=3.6.0 in c:\users\hp\learndb\.venv\lib\site-packages (from Flask>=0.10->flask_sqlalchemy) (5.0.0)
Requirement already satisfied: click>=8.0 in c:\users\hp\learndb\.venv\lib\site-packages (from Flask>=0.10->flask_sqlalchemy) (8.1.3)
Requirement already satisfied: colorama in c:\users\hp\learndb\.venv\lib\site-packages (from click>=8.0->Flask>=0.10->flask_sqlalchemy) (0.4.5)
Requirement already satisfied: zipp>=0.5 in c:\users\hp\learndb\.venv\lib\site-packages (from importlib-metadata>=3.6.0->Flask>=0.10->flask_sqlalchemy) (3.8.1)
Requirement already satisfied: MarkupSafe>=2.0 in c:\users\hp\learndb\.venv\lib\site-packages (from Jinja2>=3.0->Flask>=0.10->flask_sqlalchemy) (2.1.1)
Collecting greenlet!=0.4.17
  Downloading greenlet-1.1.3-cp39-cp39-win_amd64.whl (101 kB)
Installing collected packages: greenlet, SQLAlchemy, flask-sqlalchemy
Successfully installed SQLAlchemy-1.4.41 flask-sqlalchemy-2.5.1 greenlet-1.1.3
WARNING: You are using pip version 21.1.1; however, version 22.2.2 is available.
You should consider upgrading via the 'c:\users\hp\learndb\.venv\scripts\python.exe -m pip install --upgrade pip' command.
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ python app.py
C:\Users\HP\learndb\.venv\lib\site-packages\flask_sqlalchemy\__init__.py:851: UserWarning: Neither SQLALCHEMY_DATABASE_URI nor SQLALCHEMY_BINDS is set. Defaulting SQLALCHEMY_DATABASE_URI to "sqlite:///:memory:".
  warnings.warn(
C:\Users\HP\learndb\.venv\lib\site-packages\flask_sqlalchemy\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.
  warnings.warn(FSADeprecationWarning(
Traceback (most recent call last):
  File "C:\Users\HP\learndb\app.py", line 11, in <module>
    class User(db.Model):
  File "C:\Users\HP\learndb\app.py", line 16, in User
    age = db.Column(db.integer(), nullable=False)
AttributeError: 'SQLAlchemy' object has no attribute 'integer'
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ vi app.py
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ python app.py
C:\Users\HP\learndb\.venv\lib\site-packages\flask_sqlalchemy\__init__.py:851: UserWarning: Neither SQLALCHEMY_DATABASE_URI nor SQLALCHEMY_BINDS is set. Defaulting SQLALCHEMY_DATABASE_URI to "sqlite:///:memory:".
  warnings.warn(
C:\Users\HP\learndb\.venv\lib\site-packages\flask_sqlalchemy\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.
  warnings.warn(FSADeprecationWarning(
Traceback (most recent call last):
  File "C:\Users\HP\learndb\app.py", line 11, in <module>
    class User(db.Model):
  File "C:\Users\HP\learndb\app.py", line 16, in User
    age = db.Column(db.integer(5), nullable=False)
AttributeError: 'SQLAlchemy' object has no attribute 'integer'
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ vi app.py
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ python app.py
C:\Users\HP\learndb\.venv\lib\site-packages\flask_sqlalchemy\__init__.py:851: UserWarning: Neither SQLALCHEMY_DATABASE_URI nor SQLALCHEMY_BINDS is set. Defaulting SQLALCHEMY_DATABASE_URI to "sqlite:///:memory:".
  warnings.warn(
C:\Users\HP\learndb\.venv\lib\site-packages\flask_sqlalchemy\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.
  warnings.warn(FSADeprecationWarning(
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ vi app.py
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ python app.py
C:\Users\HP\learndb\.venv\lib\site-packages\flask_sqlalchemy\__init__.py:872: FSADeprecationWarning: SQLALCHEMY_TRACK_MODIFICATIONS adds significant overhead and will be disabled by default in the future.  Set it to True or False to suppress this warning.
  warnings.warn(FSADeprecationWarning(
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ git add .
fatal: not a git repository (or any of the parent directories): .git
(.venv)
HP@DESKTOP-B3HCFBE MINGW64 ~/learndb
$ git clone https://github.com/Professorpreneur/Python_Projects.git
Cloning into 'Python_Projects'...
remote: Enumerating objects: 9, done.
remote: Counting objects: 100% (9/9), done.
remote: Compressing objects: 100% (8/8), done.
remote: Total 9 (delta 1), reused 0 (delta 0), pack-reused 0
Receiving objects: 100% (9/9), done.
Resolving deltas: 100% (1/1), done.
